# upmd

./: .gitignore  Cargo.toml  DEMO.md  LICENSE  README.md  build.rs  flake.nix
.github/: FUNDING.yml  dependabot.yml
.github/pages/: CNAME  index.html
.github/vhs/: config.tape  demo.tape  overview.tape
.github/workflows/: ci.yml  pages.yml  release.yml
crates/upmd-parser/: Cargo.toml  README.md
crates/upmd-parser/src/: lib.rs  nodes.rs  options.rs  parser.rs
crates/upmd-parser/tests/: nested_checkbox_test.rs
crates/upmd-pty/: Cargo.toml  README.md
crates/upmd-pty/src/: lib.rs  mouse.rs  parser.rs  process.rs  signal.rs
crates/upmd-runner/: Cargo.toml  README.md
crates/upmd-runner/src/: lib.rs  quoting.rs
crates/upmd-runner/src/languages/: cmd.rs  javascript.rs  mod.rs  php.rs  ruby.rs  shell.rs
crates/upmd-runner/src/languages/c/: mod.rs
crates/upmd-runner/src/languages/go/: mod.rs  state.go
crates/upmd-runner/src/languages/python/: mod.rs  state.py
crates/upmd-runner/src/languages/rust/: mod.rs  state.rs
crates/upmd-runner/src/languages/typescript/: mod.rs  state.ts
crates/upmd-runner/src/languages/zig/: mod.rs
crates/upmd-runner/src/workspace/: adapter.rs  mod.rs  temp.rs
crates/upmd-runtime/: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/upmd-runtime/.agents/: CONFIG_OPTIONS.md  TASKS.md  WORKFLOW.md
crates/upmd-runtime/src/: core.rs  lib.rs
crates/upmd-runtime/src/runtimes/: mod.rs
crates/upmd-runtime/src/runtimes/cli/: mod.rs
crates/upmd-runtime/src/runtimes/tui/: mod.rs
crates/upmd-runtime/tests/: core.rs
src/: args.rs  main.rs  markdown_files.rs  reader.rs
src/apps/: config.rs  config.toml  exec.rs  mod.rs  navigation.rs  picker.rs  task.rs  theme.rs
src/apps/cli/: app.rs  mod.rs
src/apps/tui/: app.rs  confirm.rs  envs.rs  file_picker.rs  goto.rs  help.rs  layout.rs  markdown.rs  menu.rs  mod.rs  notification.rs  output.rs  search.rs  selection.rs  tasks.rs  themes.rs  wrap.rs
src/apps/tui/preview/: mod.rs  search.rs  selection.rs  visual_lines.rs
src/apps/tui/preview/snapshots/: upmd__apps__tui__preview__tests__code_body_wraps.snap  upmd__apps__tui__preview__tests__no_wrap_code_output.snap  upmd__apps__tui__preview__tests__wrap_long_paragraph.snap
src/apps/tui/snapshots/: upmd__apps__tui__markdown__tests__bullet_list.snap  upmd__apps__tui__markdown__tests__code_with_attr.snap  upmd__apps__tui__markdown__tests__fenced_code.snap  upmd__apps__tui__markdown__tests__headings.snap  upmd__apps__tui__markdown__tests__inline_scroll_bottom.snap  upmd__apps__tui__markdown__tests__inline_scroll_clamp.snap  upmd__apps__tui__markdown__tests__inline_scroll_first_line.snap  upmd__apps__tui__markdown__tests__inline_scroll_middle.snap  upmd__apps__tui__markdown__tests__inline_scroll_short.snap  upmd__apps__tui__markdown__tests__mixed_runbook.snap  upmd__apps__tui__markdown__tests__ordered_list.snap  upmd__apps__tui__markdown__tests__paragraph.snap  upmd__apps__tui__markdown__tests__table.snap  upmd__apps__tui__markdown__tests__table_narrow.snap  upmd__apps__tui__markdown__tests__table_wide.snap  upmd__apps__tui__markdown__tests__task_list.snap  upmd__apps__tui__markdown__tests__thematic_break.snap  upmd__apps__tui__menu__tests__menu_vertical.snap  upmd__apps__tui__wrap__tests__wrap_line_plain.snap  upmd__apps__tui__wrap__tests__wrap_line_styled.snap
src/apps/tui/widgets/: mod.rs  spinner.rs  table.rs
src/pty/: mod.rs  process.rs  state.rs  stream.rs
src/runner/: mod.rs  workspace.rs
src/utils/: mod.rs
tests/: integration.rs  windows_cli.rs
themes/: catppuccin-mocha.tmTheme  dracula.tmTheme  rose-pine.tmTheme  tokyo-night.tmTheme  vesper.tmTheme
