[package]
name = "upmd"
description = "Run code blocks directly from Markdown in a terminal UI or an automation-friendly CLI"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/rezigned/upmd"
homepage = "https://github.com/rezigned/upmd"
documentation = "https://github.com/rezigned/upmd#readme"
readme = "README.md"
license = "MIT"
authors = ["Marut Khumtong <code@rezigned.com>"]
keywords = ["upmd", "markdown", "cli", "tui", "terminal", "runner"]
categories = ["command-line-utilities", "development-tools"]
default-run = "upmd"
exclude = [".github/pages/demos/**", ".github/vhs/**"]

[workspace]
members = [
  "crates/upmd-runner",
  "crates/upmd-parser",
  "crates/upmd-runtime",
  "crates/upmd-pty",
]

[patch.crates-io]
vt100 = { git = "https://github.com/rezigned/vt100-rust", rev = "8a35571e9066436691ff52054f2f5425e22bd902" }

# Config for 'dist'
[workspace.metadata.dist]
# Ignore release.yml mismatch (manual GitHub App token edit)
allow-dirty = ["ci"]
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
msi = []
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Homebrew tap repository for formula publishing
tap = "rezigned/homebrew-tap"
# CI jobs to run for publishing artifacts (homebrew formula, etc.)
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false

[dependencies]

# Workspace crates
upmd-runner = { version = "0.1.0", path = "crates/upmd-runner" }
upmd-parser = { version = "0.1.0", path = "crates/upmd-parser" }
upmd-runtime = { version = "0.1.0", path = "crates/upmd-runtime", features = ["tui", "cli"] }
upmd-pty = { version = "0.1.0", path = "crates/upmd-pty", features = ["ratatui"] }

# CLI, config, and observability
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
directories = "6"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Terminal, PTY, and rendering
crossterm = { version = "0.29", features = ["use-dev-tty"] }
keymap = { version = "1.0.0-rc.7", features = ["crossterm"] }
libc = "0.2"
portable-pty = "0.9.0"
ratatui = "0.30.2"
syntect = "5.3.0"
unicode-width = { version = "0.2.2", features = ["cjk"] }
vt100 = "0.16.2"

# Platform and utilities
arboard = "3.6.1"
ignore = "0.4"
tempfile = "3.27"

[dev-dependencies]
insta = "1.47.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# [profile.release]
# debug = true
