[package]
name = "upmd-pty"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Reusable PTY process and VT100 parsing primitives"
license = "MIT"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
crossterm = "0.29"
libc = "0.2"
portable-pty = "0.9"
ratatui = { version = "0.30", optional = true }
vt100 = "0.16"

[features]
default = []
ratatui = ["dep:ratatui"]
